Fixed overlapping issue

--- a/Capstone/style.css
+++ b/Capstone/style.css
@@ -24,7 +24,7 @@
 
     h1 {
       text-align: center;
-      font-size: 45px;
+      font-size: 50px;
     }
 
     h3 {
@@ -38,9 +38,9 @@
         position: relative;
       }
 
-    div#header h1 {
-        height: 80px;
-        line-height: 80px;
+    #header h1 {
+        /* height: 80px; */
+        line-height: 100px;
         margin: 0;
         padding-left: 10px;
         background: #e0e0e0;
